--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "My life CHANGLOG and persistent methodology and tools radar.",
   "main": "index.js",
   "scripts": {
+    "release": "lerna publish --conventional-commits --yes",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "test": "jest"
   },
   "devDependencies": {
@@ -12,7 +14,8 @@
     "conventional-changelog-cli": "^2.0.11",
     "cross-env": "^5.1.1",
     "cz-lerna-changelog": "^2.0.0",
-    "husky": "^1.3.1"
+    "husky": "^1.3.1",
+    "lerna": "^3.4.3"
   },
   "repository": {
     "type": "git",
