--- a/packages/radar/package.json
+++ b/packages/radar/package.json
@@ -5,5 +5,6 @@
   "main": "index.js",
   "author": "JimmyLv",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "gitHead": "b0354fa3ef828fc2a0aaeb2e093f89cba7c7e0a4"
 }
