--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "My life CHANGLOG and persistent methodology and tools radar.",
   "main": "index.js",
   "scripts": {
-    "release": "lerna publish --conventional-commits --yes",
+    "release": "lerna publish --github-release --conventional-commits --yes",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "test": "jest"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.com/"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.2.1",
