--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "postpush": "yarn release"
+      "pre-push": "yarn release"
     }
   },
   "config": {
