--- a/packages/workflow/package.json
+++ b/packages/workflow/package.json
@@ -5,5 +5,6 @@
   "main": "index.js",
   "author": "JimmyLv",
   "license": "MIT",
-  "private": false
+  "private": true,
+  "gitHead": "6f23462b6d1f5de450ee0afe6cd4435db837caa1"
 }
