--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,18 @@
 {
+  "version": "1.5.1",
   "packages": [
     "packages/*"
   ],
-  "version": "1.5.1"
+  "command": {
+    "version": {
+      "allowBranch": "master",
+      "message": "chore(release): publish %s"
+    }
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.com/"
+  },
+  "npmClient": "yarn",
+  "useWorkspaces": true
 }
