--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -6,6 +6,7 @@
     "build": "gulp build",
     "start": "gulp"
   },
+  "private": false,
   "pugLintConfig": {
     "disallowHtmlText": true,
     "disallowDuplicateAttributes": true,
@@ -23,5 +24,6 @@
   "devDependencies": {
     "browser-sync": "^2.18.13",
     "gulp-gh-pages": "^0.5.4"
-  }
+  },
+  "gitHead": "7d50311df69f4cc7125f7fdef0e2c97de8186868"
 }
