fix(life): make private for life-website

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -6,7 +6,7 @@
     "build": "gulp build",
     "start": "gulp"
   },
-  "private": false,
+  "private": true,
   "pugLintConfig": {
     "disallowHtmlText": true,
     "disallowDuplicateAttributes": true,
